2006-05-18 CTAF <>
	* generic-menu.el : allow for menu buffer
	* generic-dl.el : menu buffer, with all function name of the current buffer
	* emacs : new menu with all function and configuration

2006-05-16 CTAF <>
	* xsession : allow stopping the current wm normaly
	* xsession : shutdown gnome in a clean way
	* ct-switch-wm : allow to change the current wm on the fly
	* emacs : remove show trailing white space
	* ct-switch-wm : you cant specifie the wm in argument

2006-05-14 CTAF <>
	* xsession : experimental random xsession
	* xsession : experimental change wm on the fly
	* emacs : when saving, make file executable if it should be

2006-05-12 CTAF <>
	* emacs : gdb enhancement
	* emacs : save cursor position in files
	* emacs : rebind some bindings (F7)
	* emacs : enable folding (f10)
	* emacs : add color-theme
	* emacs : add setnu-mode (line number on the left fringe)
	* emacs : autofill comment with " *" when in /* */
	* emacs : better help

2006-05-11 CTAF <>
	* color.emacs : new file for emacs color theme
	* emacs : remove hightlight change => text tend to be unreadeable

2006-05-09 CTAF <>
	* ct-date : bug with $((08)), now use denormanumber
	* emacs : hightlight current line
	* emacs : show buffer name in the window title
	* emacs : show trailing white space
	* emacs : wb-line-number : display line number on the left of each line
	* emacs : show shortcut for the last executed command if available

2006-05-05 CTAF <>
	* shell : dont load *rc and *env on gate-ssh (avoid epita "close compte")

2006-04-25 CTAF <>
	* ct-set-bg : support kde

2006-04-24 CTAF <> -- 0.3.0
	* ct-set-bg : bug with gnome
	* xsession.sh : launch app in the right order
	* xsession.sh : bug with app launching (use eval to load more than one app by line)
	* alias : ct-log => show ctafconf.log

2006-04-22 CTAF <>
	* ssft.sh : use more as pager if present
	* ct-installconf : ask works
	* ct-installconf : new item menu: information, to describe a pkg