@@ -5,7 +5,7 @@
 ## Login   <ctaf@epita.fr>
 ##
 ## Started on  Mon Sep 26 02:37:56 2005 GESTES Cedric
-## Last update Wed May 17 19:56:34 2006 GESTES Cedric
+## Last update Sat May 20 02:53:28 2006 GESTES Cedric
 ##
 ##CTAFCONF
 
@@ -42,8 +42,9 @@ launch_app ~/.ctafconf/bin/ct-set-bg
 
 if test_wm term ; then
   #appel bloquant
-  ct_log TERM WM
+  ct_log "TERM WM"
   launch_wm
+  exit
 fi
 
 #personal startup file
@@ -52,12 +53,17 @@ if [ -f ~/.ctafconf/perso/xsession.mine ]; then
 fi
 
 ########################### LAUNCHING WM ###########################
-#Lauch gnome (appel bloquant)
+#launch the gnome setting daemon (for font, gconf, ...) after gnome-session
+#cause gnome-session launch it
 if ! test_wm gnome ; then
-  #launch the gnome setting daemon (for font, gconf, ...) after gnome-session
-  #cause gnome-session launch it
   if which gnome-settings-daemon >/dev/null 2>/dev/null; then
     launch_app gnome-settings-daemon
+  fi
+fi
+
+if ! test_wm kde ; then
+  if which kdeinit >/dev/null 2>/dev/null; then
+    launch_app kdeinit
   fi
 fi
 
