@@ -1,3 +1,8 @@
+2006-05-20 CTAF <>
+	* xsession : support kdeinit
+	* xsession : stability improvement
+	* emacs : indicate buffer boundary on the left fringe
+
 2006-05-18 CTAF <>
 	* generic-menu.el : allow for menu buffer
 	* generic-dl.el : menu buffer, with all function name of the current buffer
